--- a/MVC5-Otomasyon/MVC5-Otomasyon/Views/Kategori/Index.cshtml
+++ b/MVC5-Otomasyon/MVC5-Otomasyon/Views/Kategori/Index.cshtml
@@ -3,9 +3,8 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/AdminLayout.cshtml";
 }
-<br/>
-<h5>sdf</h5>
-<table class="table table-bordered">
+
+<table class="table table-bordered" style="margin-top:20px;">
     <tr>
         <th>
             ID
