--- a/MVC5-Otomasyon/MVC5-Otomasyon/Views/Kategori/Index.cshtml
+++ b/MVC5-Otomasyon/MVC5-Otomasyon/Views/Kategori/Index.cshtml
@@ -19,10 +19,11 @@
 
 <div id="toolbar">
     <button class="btn btnKategori" type="submit" onclick="location.href='@Url.Action("Create")'"> <i class="fa fa-plus-circle" style="color: green;"></i> Kategori Ekle</button>
-    <button class="btn btnKategori1" type="submit" title="Düzenle"> <i class="fas fa-edit"></i></button>
-    <button class="btn btnKategori1" type="submit" title="Sil"> <i class="far fa-trash-alt"></i></button>
 
-   
+
+
+
+
 </div>
 <table id="table"
        data-click-to-select="true"
@@ -34,16 +35,19 @@
        data-maintain-selected="true"
        data-page-size="10"
        data-page-list="[5, 10, 20, 40, 50, 100, ALL]"
-       data-export-options='{
+       @*data-export-options='{
          "fileName": "test",
          "ignoreColumn": ["state"]
-       }'>
+       }'*@>
     <thead>
         <tr>
 
-            <th data-field="state" data-checkbox="true"></th>
+            @*<th data-field="state" data-checkbox="true" id="chcstate">
+
+                </th>*@
 
             <th>
+
                 @Html.DisplayNameFor(model => model.KategoriID)
             </th>
             <th>
@@ -56,15 +60,25 @@
     @foreach (var item in Model)
     {
         <tr>
-            <td></td>
+            @*<td></td>*@
 
             <td>
-                @Html.DisplayFor(modelItem => item.KategoriID)
+                <b>
+                    @Html.DisplayFor(modelItem => item.KategoriID)
+                </b>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.KategoriAd)
             </td>
             <td>
+
+                @Html.ActionLink("Güncelle", "Edit", new { id = item.KategoriID }, new { @style = "color:#078F00;" }) |
+
+                @Html.ActionLink("Sil", "Delete", new { id = item.KategoriID }, new { @style = "color:red;" })
+
+                @*<button class="btn btnKategori1"   type="submit" title="Düzenle"> <i class="fas fa-edit"></i></button>
+
+                    <button class="btn btnKategori1"   type="submit" title="Sil"> <i class="far fa-trash-alt"></i></button>*@
             </td>
 
         </tr>
