--- a/MVC5-Otomasyon/MVC5-Otomasyon/Views/Kategori/KategoriGet.cshtml
+++ b/MVC5-Otomasyon/MVC5-Otomasyon/Views/Kategori/KategoriGet.cshtml
@@ -1,31 +1,37 @@
-﻿@model MVC5_Otomasyon.Models.Classes.Kategori
+﻿
+@model MVC5_Otomasyon.Models.Classes.Kategori
 
 @{
-    ViewBag.Title = "KategoriCreate";
+    ViewBag.Title = "KategoriGet";
     Layout = "~/Views/Shared/AdminLayout.cshtml";
 }
 
+@*<h2>KategoriGet</h2>*@
 
 
-@using (Html.BeginForm())
+
+@using (Html.BeginForm("KategoriUpdate", "Kategori", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4 style="margin-top:20px;">Kategori Ekle</h4>
+        <h4 style="margin-top:20px;">Kategori Güncelle</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.KategoriAd, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-9">
+
                 @Html.EditorFor(model => model.KategoriAd, new { htmlAttributes = new { @class = "form-control", @placeholder = "Kategori Ad Giriniz" } }) @*required = "required",*@
                 @Html.ValidationMessageFor(model => model.KategoriAd, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.KategoriID)
+
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Kaydet" class="btn btn-success" />
+                <input type="submit" value="Update" class="btn btn-secondary" />
             </div>
         </div>
     </div>
@@ -35,5 +41,8 @@
         <div class="col-md-9">
             @Html.ActionLink("Geri Dön", "Index")
         </div>
+
     </div>
 </div>
+
+
