--- a/MVC5-Otomasyon/MVC5-Otomasyon/Views/Shared/AdminLayout.cshtml
+++ b/MVC5-Otomasyon/MVC5-Otomasyon/Views/Shared/AdminLayout.cshtml
@@ -6,6 +6,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+
+    
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -26,8 +29,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.14.2/dist/bootstrap-table.min.js"></script>
-    <script src="extensions/export/bootstrap-table-export.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.18.3/dist/bootstrap-table.min.js"></script>
     
+    <script src="extensions/export/bootstrap-table-export.js"></script>
+
 
 </head>
 <body>
