--- a/MVC5-Otomasyon/MVC5-Otomasyon/Views/Kategori/Index.cshtml
+++ b/MVC5-Otomasyon/MVC5-Otomasyon/Views/Kategori/Index.cshtml
@@ -18,7 +18,7 @@
 
 
 <div id="toolbar">
-    <button class="btn btnKategori" type="submit" onclick="location.href='@Url.Action("Create")'"> <i class="fa fa-plus-circle" style="color: green;"></i> Kategori Ekle</button>
+    <button class="btn btnStyle" type="submit" onclick="location.href='@Url.Action("Create")'"> <i class="fa fa-plus-circle" style="color: green;"></i> Ürün Ekle</button>
 </div>
 <table id="table"
        data-click-to-select="true"
@@ -27,7 +27,7 @@
        data-show-export="true"
        data-pagination="true"
        data-search="true"
-        data-strict-search="true"
+       data-strict-search="true"
        data-maintain-selected="true"
        data-sort-name="name"
        data-sort-order="desc"
