--- a/MVC5-Otomasyon/MVC5-Otomasyon/Views/Shared/AdminLayout.cshtml
+++ b/MVC5-Otomasyon/MVC5-Otomasyon/Views/Shared/AdminLayout.cshtml
@@ -8,7 +8,7 @@
 <head>
 
 
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -25,7 +25,7 @@
 
 
     @*<link rel="stylesheet" type="text/css" href="extensions/filter-control/bootstrap-table-filter-control.css">
-    <script src="extensions/filter-control/bootstrap-table-filter-control.js"></script>*@
+        <script src="extensions/filter-control/bootstrap-table-filter-control.js"></script>*@
 
 
 
@@ -76,11 +76,11 @@
                 <div class="sb-sidenav-menu">
                     <div class="nav">
                         <div class="sb-sidenav-menu-heading">islemler</div>
-                        <a class="nav-link" href="index.html">
+                        <a class="nav-link" href="/Kategori/Index/">
                             <div class="sb-nav-link-icon"><i class="fas fa-th-large"></i></div>
-                            Kategori
+                            Kategoriler
                         </a>
-                        <a class="nav-link" href="index.html">
+                        <a class="nav-link" href="/Urun/Index/">
                             <div class="sb-nav-link-icon"><i class="fas fa-list-alt"></i></div>
                             Ürünler
                         </a>
